appId: com.kjetilvalle.trene
---
- tapOn: "Show roots"
- tapOn: "Downloads"
- extendedWaitUntil: { visible: "${BACKUP_FILE}", timeout: 30000 }
- tapOn: "${BACKUP_FILE}"
