appId: com.kjetilvalle.trene
---
- extendedWaitUntil:
    visible: "(Browse|${BACKUP_FILE}|On My iPhone|No Recents)"
    timeout: 60000
- runFlow:
    when:
      visible: "No Recents"
    commands:
      - tapOn:
          point: "72%,95%"
- runFlow:
    when:
      visible: "Browse"
    commands:
      - tapOn: "Browse"
- extendedWaitUntil:
    visible: "(${BACKUP_FILE}|On My iPhone)"
    timeout: 60000
- runFlow:
    when:
      notVisible: "${BACKUP_FILE}"
    commands:
      - runFlow:
          when:
            notVisible:
              id: "Trene, Container"
          commands:
            - runFlow:
                when:
                  visible:
                    id: "BackButton"
                commands:
                  - tapOn:
                      id: "BackButton"
      - runFlow:
          when:
            notVisible:
              id: "Trene, Container"
          commands:
            - extendedWaitUntil:
                visible:
                  id: "DOC.sidebar.item.On My iPhone"
                timeout: 60000
            - tapOn:
                id: "DOC.sidebar.item.On My iPhone"
      - extendedWaitUntil:
          visible:
            id: "Trene, Container"
          timeout: 60000
      - tapOn:
          id: "Trene, Container"
- extendedWaitUntil:
    visible: "${BACKUP_FILE}"
    timeout: 60000
- tapOn:
    id: "${BACKUP_FILE}, trene-backup"
